# nanoclaw

./: .gitignore  README.md  main.py  pyproject.toml  run_docker_workplace_suite.md  run_docker_workplace_suite.sh  run_evals.sh  run_nanoclaw_workplace_suite.md  run_nanoclaw_workplace_suite.sh  run_no_llm_mock_skills_ablation.sh  run_tasks.sh  sync_v2.py  tmp_generate_tasks_54_60.py
doc/: my_test_data.md  new_verify.jsonl  persona500.jsonl  persona_500.jsonl  skillhub-skills-crawl.md  task.txt  task_batch.txt  task_data_guide.md  task_no_skills.txt  task_no_skills_no_result.txt  合成基础数据脚本修复LLM验证.py  基础数据添加skill脚本.py  基础数据筛选脚本.py
nanoclaw/: __init__.py  batch_runner.py  cli.py  command_policy.py  config.py  core_loop.py  evaluation_visualization.py  evaluator.py  generated_task_validator.py  memory.py  prompt_sync.py  run_store.py  session_store.py  skills.py  task_batch_unpacker.py  task_curation.py  task_importer.py  task_loader.py  task_normalizer.py  workplace_trace_evaluator.py
runner_profiles/: codex.yaml  hermes.yaml  openclaw.example.yaml  openclaw.yaml
scripts/: build_aligned_staging_mix.py  build_dataset_pipeline.py  curate_tasks.py  evaluate_all_models.py  evaluate_generated_tasks.py  evaluate_workplace_trace_tasks.py  import_staged_tasks.py  normalize_generated_tasks.py  run_generated_tasks.py  sync_openclaw_prompts.py  unpack_task_batch.py  validate_generated_tasks.py  visualize_evaluation_summary.py
tasks/: data_01.yaml  data_02.yaml  data_03.yaml  data_04.yaml  data_05.yaml  data_06.yaml  data_08.yaml  data_09.yaml  data_10.yaml  data_100.yaml  (+309 more)
(+1607 files in other folders)
