[project]
name = "nanoclaw"
version = "0.1.0"
description = "Minimal OpenClaw-like core loop for agent safety research"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "cryptography>=42.0.0",
    "Flask>=3.0.0",
    "numpy>=1.26.0",
    "openai>=1.50.0",
    "pandas>=2.2.0",
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
    "requests>=2.32.0",
]

[project.scripts]
nanoclaw = "nanoclaw.cli:main"
